; ModuleID = '/home/carl/AnghaBench/freebsd/sys/contrib/ck/src/extr_ck_hs.c_ck_hs_reset.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/contrib/ck/src/extr_ck_hs.c_ck_hs_reset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ck_hs = type { %struct.ck_hs_map* }
%struct.ck_hs_map = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ck_hs_reset(%struct.ck_hs* %0) #0 {
  %2 = alloca %struct.ck_hs*, align 8
  %3 = alloca %struct.ck_hs_map*, align 8
  store %struct.ck_hs* %0, %struct.ck_hs** %2, align 8
  %4 = load %struct.ck_hs*, %struct.ck_hs** %2, align 8
  %5 = getelementptr inbounds %struct.ck_hs, %struct.ck_hs* %4, i32 0, i32 0
  %6 = load %struct.ck_hs_map*, %struct.ck_hs_map** %5, align 8
  store %struct.ck_hs_map* %6, %struct.ck_hs_map** %3, align 8
  %7 = load %struct.ck_hs*, %struct.ck_hs** %2, align 8
  %8 = load %struct.ck_hs_map*, %struct.ck_hs_map** %3, align 8
  %9 = getelementptr inbounds %struct.ck_hs_map, %struct.ck_hs_map* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = call i32 @ck_hs_reset_size(%struct.ck_hs* %7, i32 %10)
  ret i32 %11
}

declare dso_local i32 @ck_hs_reset_size(%struct.ck_hs*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
